# calibration-framework

./: README.md  README.rst  pyproject.toml  requirements.txt  setup.py
calibration/: AbstractCalibration.py
calibration/binning/: BBQ.py  ENIR.py  HistogramBinning.py  IsotonicRegression.py  NearIsotonicRegression.py  __init__.py
calibration/metrics/: ACE.py  ECE.py  MCE.py
calibration/presentation/: ReliabilityDiagram.py
calibration/regularization/: ConfidencePenalty.py  __init__.py
calibration/scaling/: BetaCalibration.py  LogisticCalibration.py  TemperatureScaling.py  __init__.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_templates/: custom_class.rst
examples/: __init__.py  utils.py
examples/cifar10/: measure_miscalibration.py
examples/cifar100/: densenet-bc-100-cifar-100.npz  measure_miscalibration.py
examples/classification/: CIFAR.py  Evaluation.py  __init__.py  utils.py
examples/classification/records/cifar10/: lenet-5-cifar-10.npz  wideresnet-16-4-cifar-10.npz
examples/classification/records/cifar100/: lenet-5-cifar-100.npz  wideresnet-16-4-cifar-100.npz
examples/detection/: Calibration.py  Evaluation.py  Features.py  Helper.py  __init__.py
examples/detection/artificial/: Calibration.py  CreateDataset.py  Evaluation.py  __init__.py  toolchain.py
examples/detection/mscoco/: Evaluation.py
examples/detection/mscoco/records/: faster-rcnn-resnet-50-iou-0.60.npz  faster-rcnn-resnet-50-iou-0.75.npz  rfcn-resnet-101-iou-0.60.npz  rfcn-resnet-101-iou-0.75.npz  ssd-inception-v2-iou-0.60.npz  ssd-inception-v2-iou-0.75.npz  ssd-resnet-50-v1-iou-0.60.npz  ssd-resnet-50-v1-iou-0.75.npz
examples/regression/: README.rst  __init__.py
examples/regression/artificial/: README.md  README.rst  __init__.py  data.py  main.py  visualize.py
examples/regression/multivariate/: README.md  README.rst  __init__.py  data.py  main.py  visualize.py
netcal/: AbstractCalibration.py  Context.py  Decorator.py  Helper.py  Logging.py  README.md  Stats.py  __init__.py
netcal/binning/: BBQ.py  ENIR.py  HistogramBinning.py  IsotonicRegression.py  NearIsotonicRegression.py  README.md  __init__.py
netcal/metrics/: ACE.py  ECE.py  MCE.py  MMCE.py  Miscalibration.py  PICP.py  README.md  __init__.py
netcal/metrics/confidence/: ACE.py  ECE.py  MCE.py  MMCE.py  README.md  __init__.py
netcal/metrics/regression/: ENCE.py  NLL.py  PICP.py  QCE.py  QuantileLoss.py  README.md  UCE.py  __init__.py
netcal/presentation/: README.md  ReliabilityDiagram.py  ReliabilityQCE.py  ReliabilityRegression.py  __init__.py
netcal/regression/: IsotonicRegression.py  README.md  VarianceScaling.py  __init__.py
netcal/regression/gp/: AbstractGP.py  GPBeta.py  GPCauchy.py  GPNormal.py  README.md  __init__.py
netcal/regression/gp/kernel/: GaussianRBFKernel.py  README.md  __init__.py
netcal/regression/gp/likelihood/: BetaLikelihood.py  CauchyLikelihood.py  README.md  ScaledMultivariateNormalLikelihood.py  ScaledNormalLikelihood.py  __init__.py
netcal/regularization/: ConfidencePenalty.py  DCAPenalty.py  MMCEPenalty.py  README.md  __init__.py
netcal/scaling/: AbstractLogisticRegression.py  BetaCalibration.py  BetaCalibrationDependent.py  LogisticCalibration.py  LogisticCalibrationDependent.py  README.md  TemperatureScaling.py  __init__.py
