# Copyright (C) 2019-2022 Ruhr West University of Applied Sciences, Bottrop, Germany
# AND e:fs TechHub GmbH, Gaimersheim Germany
#
# This Source Code Form is subject to the terms of the Apache License 2.0
# If a copy of the APL2 was not distributed with this
# file, You can obtain one at https://www.apache.org/licenses/LICENSE-2.0.txt.

[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = "netcal"
description = "The net:cal calibration framework is a Python 3 library for measuring and mitigating miscalibration of uncertainty estimates, e.g., by a neural network."
requires-python = ">=3.6"
authors = [
  {email = "fabian.kueppers@efs-auto.com"},
  {name = "Fabian Küppers"}
]
maintainers = [
  {email = "fabian.kueppers@efs-auto.com"},
  {name = "Fabian Küppers"}
]

keywords = [
    "netcal",
    "calibration",
    "uncertainty",
    "neural",
    "network",
    "confidence",
    "classification",
    "object",
    "detection",
    "regression"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.18",
    "scipy>=1.4",
    "matplotlib>=3.3",
    "scikit-learn>=0.24",
    "torch>=1.9",
    "torchvision>=0.10.0",
    "tqdm>=4.40",
    "pyro-ppl>=1.8",
    "tikzplotlib==0.9.8",
    "tensorboard>=2.2",
    "gpytorch>=1.5.1"
]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/fabiankueppers/calibration-framework"
documentation = "https://fabiankueppers.github.io/calibration-framework"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.txt"

[tool.setuptools.packages.find]
exclude = ["img"]

[tool.setuptools.dynamic]
version = {attr = "netcal.__version__"}
